fixed overlapping on shop page in shopping

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -508,9 +508,9 @@ a {
   top: 70%;
 }
 
-/* .grid-container {
+.grid-container {
   padding-top: 35vh;
-} */
+}
 
 /* create item */
 
